--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 	
 </style>
 
+<!--
 <script>
 function copy(dest, source) {
   if(dest.source == source) {
@@ -59,7 +60,7 @@ function copy(dest, source) {
   dest.blur();
 }
 </script>
-
+-->
 <body>
 <div class="container">
 <br>
@@ -136,48 +137,59 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
 
     <script>
         let paper_count = 0;
+	let  talk_count = 0;
 
         function add_paper(title, authors, conference, link, bib, abstract, arxiv_link, journal_link, data, slides, talk, msg) {
-            const listEntry = `
-                <li style="font-size:18px">
-                    <b>${title}</b><br>${authors}.<br>${conference}.<br>
-                    ${bib ? `<div id="bib${paper_count}" style="display:none">${bib}</div>
-                    <a href="javascript:copy(div${paper_count}, bib${paper_count})" class="button">[bib]</a>` : ''}
-                    ${abstract ? `
-        <div id="abstract${paper_count}" style="display:none">${abstract}</div>
-        <a href="javascript:copy(document.getElementById('div${paper_count}'), document.getElementById('abstract${paper_count}'))" class="button">[abstract]</a>` : ''}
-                    ${arxiv_link ? `<a href="${arxiv_link}" class="button">[arXiv]</a>` : ''}
-                    ${journal_link ? `<a href="${journal_link}" class="button">[journal]</a>` : ''}
-                    ${data ? `<a href="${data}" class="button">[data]</a>` : ''}
-                    ${slides ? `<a href="${slides}" class="button">[slides]</a>` : ''}
-                    ${talk ? `<a href="${talk}" class="button">[talk]</a>` : ''}
-                    ${msg ? `<i>${msg}</i>` : ''}
-                </li>
-                <div id="div${paper_count}" style="font-size:18px"></div><br>
-            `;
-            
-            document.getElementById("papersList").innerHTML += listEntry;
-            paper_count++;
-        }
+    const listEntry = `
+        <li style="font-size:18px">
+            <b>${title}</b><br>${authors}.<br>${conference}.<br>
+            ${bib ? `<div id="bib${paper_count}" style="display:none">${bib}</div>
+            <a href="javascript:copy('bib${paper_count}')" class="button">[bib]</a>` : ''}
+            ${abstract ? `<div id="abstract${paper_count}" style="display:none">${abstract}</div>
+            <a href="javascript:copy('abstract${paper_count}')" class="button">[abstract]</a>` : ''}
+            ${arxiv_link ? `<a href="${arxiv_link}" class="button">[arXiv]</a>` : ''}
+            ${journal_link ? `<a href="${journal_link}" class="button">[journal]</a>` : ''}
+            ${data ? `<a href="${data}" class="button">[data]</a>` : ''}
+            ${slides ? `<a href="${slides}" class="button">[slides]</a>` : ''}
+            ${talk ? `<a href="${talk}" class="button">[talk]</a>` : ''}
+            ${msg ? `<i>${msg}</i>` : ''}
+        </li>
+        <div id="div${paper_count}" style="font-size:18px"></div><br>
+    `;
 
-        let talk_count = 0;
+    document.getElementById("papersList").innerHTML += listEntry;
+    paper_count++;
+}
 
-        function add_talk(title, locations, talk_abstract, slides, recording) {
-            const listEntry = `
-                <li style="font-size:18px">
-                    <b>${title}</b><br>${locations}.<br>
-                    ${talk_abstract ? `
-        <div id="talk_abstract${talk_count}" style="display:none">${talk_abstract}</div>
-        <a href="javascript:copy(document.getElementById('div${talk_count}'), document.getElementById('talk_abstract${talk_count}'))" class="button">[abstract]</a>` : ''}
-                    ${slides ? `<a href="${slides}" class="button">[slides]</a>` : ''}
-                    ${recording ? `<a href="${recording}" class="button">[recording]</a>` : ''}
-                </li>
-                <div id="div${talk_count}" style="font-size:18px"></div><br>
-            `;
-            
-            document.getElementById("talksList").innerHTML += listEntry;
-            talk_count++;
-        }
+function add_talk(title, locations, talk_abstract, slides, recording) {
+    const listEntry = `
+        <li style="font-size:18px">
+            <b>${title}</b><br>${locations}.<br>
+            ${talk_abstract ? `<div id="talk_abstract${talk_count}" style="display:none">${talk_abstract}</div>
+            <a href="javascript:copy('talk_abstract${talk_count}')" class="button">[abstract]</a>` : ''}
+            ${slides ? `<a href="${slides}" class="button">[slides]</a>` : ''}
+            ${recording ? `<a href="${recording}" class="button">[recording]</a>` : ''}
+        </li>
+        <div id="div${talk_count}" style="font-size:18px"></div><br>
+    `;
+
+    document.getElementById("talksList").innerHTML += listEntry;
+    talk_count++;
+}
+
+function copy(id) {
+    const element = document.getElementById(id);
+    if (element.style.display === "none") {
+        element.style.display = "block"; // Show the element
+        element.style.width = "800px"; // Adjust width as needed
+        element.style.padding = "10px"; // Adjust padding as needed
+        element.style.border = "2px dotted gray"; // Set border
+        element.style.background = "#F5F5F5"; // Set background color
+    } else {
+        element.style.display = "none"; // Hide the element
+    }
+}
+
 
         // Example calls to add papers and talks
         add_paper("Sample Paper Title", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
