--- a/index.html
+++ b/index.html
@@ -143,18 +143,19 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
     const listEntry = `
         <li style="font-size:18px">
             <b>${title}</b><br>${authors}.<br>${conference}.<br>
-            ${bib ? `<div id="bib${paper_count}" style="display:none">${bib}</div>
-            <a href="javascript:copy('bib${paper_count}')" class="button">[bib]</a>` : ''}
-            ${abstract ? `<div id="abstract${paper_count}" style="display:none">${abstract}</div>
-            <a href="javascript:copy('abstract${paper_count}')" class="button">[abstract]</a>` : ''}
+            ${bib ? `<a href="javascript:copy('bib${paper_count}')" class="button">[bib]</a>` : ''}
+            ${abstract ? `<a href="javascript:copy('abstract${paper_count}')" class="button">[abstract]</a>` : ''}
             ${arxiv_link ? `<a href="${arxiv_link}" class="button">[arXiv]</a>` : ''}
             ${journal_link ? `<a href="${journal_link}" class="button">[journal]</a>` : ''}
             ${data ? `<a href="${data}" class="button">[data]</a>` : ''}
             ${slides ? `<a href="${slides}" class="button">[slides]</a>` : ''}
             ${talk ? `<a href="${talk}" class="button">[talk]</a>` : ''}
             ${msg ? `<i>${msg}</i>` : ''}
+
+            <!-- Hidden div for abstract and bib below the buttons -->
+            ${bib ? `<div id="bib${paper_count}" style="display:none">${bib}</div>` : ''}
+            ${abstract ? `<div id="abstract${paper_count}" style="display:none">${abstract}</div>` : ''}
         </li>
-        <div id="div${paper_count}" style="font-size:18px"></div><br>
     `;
 
     document.getElementById("papersList").innerHTML += listEntry;
@@ -165,12 +166,13 @@ function add_talk(title, locations, talk_abstract, slides, recording) {
     const listEntry = `
         <li style="font-size:18px">
             <b>${title}</b><br>${locations}.<br>
-            ${talk_abstract ? `<div id="talk_abstract${talk_count}" style="display:none">${talk_abstract}</div>
-            <a href="javascript:copy('talk_abstract${talk_count}')" class="button">[abstract]</a>` : ''}
+            ${talk_abstract ? `<a href="javascript:copy('talk_abstract${talk_count}')" class="button">[abstract]</a>` : ''}
             ${slides ? `<a href="${slides}" class="button">[slides]</a>` : ''}
             ${recording ? `<a href="${recording}" class="button">[recording]</a>` : ''}
+
+            <!-- Hidden div for talk abstract below the buttons -->
+            ${talk_abstract ? `<div id="talk_abstract${talk_count}" style="display:none">${talk_abstract}</div>` : ''}
         </li>
-        <div id="div${talk_count}" style="font-size:18px"></div><br>
     `;
 
     document.getElementById("talksList").innerHTML += listEntry;
@@ -189,6 +191,7 @@ function copy(id) {
         element.style.display = "none"; // Hide the element
     }
 }
+
 
 
         // Example calls to add papers and talks
