--- a/index.html
+++ b/index.html
@@ -217,7 +217,16 @@ function copy(id) {
 
         // Example calls to add papers and talks
         add_paper("Sample Paper Title", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
-        add_talk("Sample Talk Title", "Location A, Location B", "Sample talk abstract.", "#", "#");
+	add_paper("Sample Paper Title", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
+        add_paper("Sample Paper Title", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
+	add_paper("Sample Paper Title", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
+	add_paper("Sample Paper Title", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
+	  
+	add_talk("Sample Talk Title", "Location A, Location B", "Sample talk abstract.", "#", "#");
+	add_talk("Sample Talk Title", "Location A, Location B", "Sample talk abstract.", "#", "#");
+	add_talk("Sample Talk Title", "Location A, Location B", "Sample talk abstract.", "#", "#");
+	add_talk("Sample Talk Title", "Location A, Location B", "Sample talk abstract.", "#", "#");
+	add_talk("Sample Talk Title", "Location A, Location B", "Sample talk abstract.", "#", "#");
     </script>
 </div>
 
