--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ function copy(dest, source) {
 
 <div class="container">
 <p>
-<b>PAGE NOT COMPLETE OR ACCURATE YET</b>
+<b>PAGE NOT COMPLETE OR ACCURATE YET.</b>
 <br>
 <br>
 I am a first-year graduate student in the <a href="https://math.nyu.edu/dynamic/">Department of Mathematics</a> at the <!--<a href="https://cims.nyu.edu/dynamic/">-->Courant Institute. <!--I am very fortunate to be advised by <a href="https://www.scottnarmstrong.com">Scott Armstrong</a> and <a href="https://cims.nyu.edu/~bauerschmidt/index.html">Roland Bauerschmidt</a>. -->Prior to Courant, I did my undergraduate studies at <!--<a href="https://www.stanford.edu">-->Stanford University.
