--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ function copy(dest, source) {
   }
   dest.blur();
 }
+
 </script>
 -->
 <body>
@@ -139,8 +140,9 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
 
 <hr>
 	
-    <h2>Papers</h2>
+    <h2>Selected Papers</h2>
     <ul id="papersList"></ul>
+ 	<a href="all_papers.html" class="button">(View All Papers)</a>
     <hr>	
     <h2>Talks</h2>
     <ul id='talksList' style='list-style-type: none; padding-left: 0;'>
@@ -228,6 +230,8 @@ function copy(id) {
     </script>
 </div>
 
+<script src="scripts.js"></script>
+	
 <hr>	
 <!--
     <h2> Talks</h2>
