--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@ function copy(id) {
 }
 
         // Example calls to add papers and talks
-        add_paper("Sample Paper Title1", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
-	add_paper("Sample Paper Title2", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
-        add_paper("Sample Paper Title3", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
-	add_paper("Sample Paper Title4", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
-	add_paper("Sample Paper Title5", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
+ //        add_paper("Sample Paper Title1", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
+	// add_paper("Sample Paper Title2", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
+ //        add_paper("Sample Paper Title3", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
+	// add_paper("Sample Paper Title4", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
+	// add_paper("Sample Paper Title5", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
 	  
 	add_talk("Sample Paper Title1", "Location A, Location B", "Sample talk abstract.", "#", "#");
 	add_talk("Sample Paper Title4", "Location A, Location B", "Sample talk abstract.", "#", "#");
