--- a/all_papers.html
+++ b/all_papers.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" type="text/css" media="screen,print" href="css/style.css" />
 </head>
 <body>
-    <div class="container">
-        <h1>All Papers</h1>
-        <ul id="allPapersList" style='list-style-type: none; padding-left: 0;'></ul>
-        <button class="button" onclick="updateSelectedPapers()">Update Home Page</button>
-    </div>
+    <div class="col-sm-7">
+<h2>Papers: <span style="font-family:STFangsong; font-size:20pt">
+</div>
+<div class="col-sm-5">
+<div class="clearfix visible-xs-block"></div>
+<h3 align="right"> <a href="index.html">[homepage]</a> <span style="font-family:STFangsong; font-size:14pt"></h3> 
+</div>
 
     <script src="scripts.js"></script>
 </body>
