--- a/all_papers.html
+++ b/all_papers.html
@@ -16,6 +16,8 @@
 <h3 align="right"> <a href="index.html">[homepage]</a> <span style="font-family:STFangsong; font-size:14pt"></h3> 
 </div>
 
+    <ul id="allPapersList" style='list-style-type: none; padding-left: 0;'></ul>
+
     <script src="scripts.js"></script>
 </body>
 </html>
